# concrete-delivery-problem

./: .gitignore  CMakeLists.txt  Notes_19_04_21.txt  README.md  concrete_problem.ipynb  hybrid vlns.ipynb  math_model.ipynb  model.html  model3.ipynb  refine.ipynb
Article/: References.bib  Study of mixed integer programming models for the concrete delivery problem.xlsx  article.tex  articleCDP.tex  cdp_content.tex  cdp_preambule.tex  ~$Revue.xlsx
ArticleCDP/: Revue.xlsx  cdp_content.tex
ArticleCDP/original/: References.bib  Sarkar et al. - 2019 - Optimization of ready mixed concrete delivery for .xlsx  articleCDP.bbl  articleCDP.tex  draft.tex
Data/questions/: Horaire 2020-10-05 au 2020-10-10.xlsx  Reponses UNIBETON Andre.docx  Reponses UNIBETON Patrick.docx
Data/raw/: EMPLOYETAB.xlsx  LOCATIONTAB.xlsx  VEHICLESTAB.csv  VEHICLESTAB.xlsx  adresses_complete.xlsx
Presentation/Automne 2020/: Presentation.docx  biblio.bib  ciment_qc.pptx  ciment_quebec.tex  index.html  presentation_CQ.aux  presentation_CQ.bbl  presentation_CQ.blg  presentation_CQ.fdb_latexmk  presentation_CQ.fls  presentation_CQ.nav  presentation_CQ.out  presentation_CQ.tex  presentation_CQ.toc
References/: Reference.txt
code/: BestSolutionList.h  CMakeLists.txt  Combinatorial.cpp  Combinatorial.h  Cost.cpp  Cost.h  Data.cpp  Data.h  GRASP.cpp  GRASP.h  IAlgorithm.h  IFilePriorite.h  InsRmvMethod.h  ListMove.h  Move.h  Node.h  Parameters.cpp  Parameters.h  Prompt.cpp  Prompt.h  Solution.cpp  Solution.h  SortRelated.cpp  SortRelated.h  TempsPriorite.cpp  TempsPriorite.h  TimeSlot.cpp  TimeSlot.h  TimeSlotPriorite.cpp  TimeSlotPriorite.h  UpdateCost.cpp
code/heur/: AllInsertionOperator.h  CDPSolver.cpp  CDPSolver.h  CustInsertion.cpp  CustInsertion.h  CustInsertionBacktrack.cpp  CustInsertionOperator.h  DriverInsertion.cpp  DriverInsertion.h  DriverInsertionOperator.h  (+16 more)
codeCDP/: CMakeLists.txt  Data.cpp  Data.h  Driver.h  GRASP.cpp  IAlgorithm.h  ISolutionList.h  InsertOperator.h  Makefile  Move.h  Node.h  Relatedness.h  RemoveOperator.h  Solution.cpp  Solution.h  TimeSlot.h  UbManager.cpp  UbManager.h  cmake_install.cmake  code  s0.csv  s1.csv  s2.csv  sbest.csv
codeCQ/: CMakeCache.txt  CMakeLists.txt  Combinatorial.cpp  Combinatorial.h  Cost.cpp  Cost.h  Data.cpp  Data.h  Driver.h  GRASP.cpp  GRASP.h  InsRmvMethod.h  Makefile  Move.h  Node.h  Parameters.cpp  Parameters.h  Prompt.h  Solution.cpp  Solution.h  SortRelated.cpp  SortRelated.h  TempsPriorite.cpp  TempsPriorite.h  TimeSlot.cpp  TimeSlot.h  UpdateCost.cpp  cmake_install.cmake  cur.csv  gantt.ipynb  gantt.py  run.sh  s1.csv
codeCQ/heur/: CDPSolver.cpp  CDPSolver.h  CustInsertion.cpp  CustInsertion.h  CustInsertion2.cpp  CustInsertionBacktrack.cpp  CustInsertionBacktrack.h  CustInsertionOperator.h  CustInsertionPenalty.cpp  InsRmvBuilder.h  InsRmvBuilder1.h  InsRmvBuilder2.h  InsRmvBuilder3.h  InsRmvMethodFast.cpp  InsRmvMethodFast.h  ListMoveVrp.cpp  ListMoveVrp.h  MoveVrp.h  PriorityQueueInsertion.cpp  PriorityQueueInsertion.h  RechercheLocale.cpp  RechercheLocale.h  Solver.cpp  Solver.h  main_heur.cpp
codeCQ/lib/: Chrono.h  DepthFirstSearch  Edge.h  Graph.cpp  MaxFlow.cpp  MaxFlow.h  Network.cpp  Vertex.h  capsep.cpp  cnstrmgr.h  combsep.cpp  combsep.h  compcuts.cpp  compcuts.h  cutbase.cpp  glmsep.cpp  grsearch.cpp  grsearch.h  hpmstar.cpp  hpmstar.h  mstarsep.h  newhtour.h  strcomb.cpp
codeCQ/model/: Arc.h  Graph.cpp  Graph.h  SolverExact.cpp  SolverExact.h
codeCQ/model/cplex/: cplexSolver.cpp  cplexSolver.h  createConstraints.cpp  createObjective.cpp  createVariables.cpp  solveModel.cpp
codeCQ/model/gurobi/: gurobiSolver.cpp  gurobiSolver.h
draft/: Notes_12_05_21.txt  concrete_problem.html  model.ipynb  model2.ipynb  review.ipynb
instances/: instance_size.csv
matrices/: Clients_L.csv  Clients_L_8.csv  Matrice_de_distance_L_8.csv  Matrice_de_temps_L_8.csv
modele/: conflict_refiner.py
result/: test.csv
script/: cdpA.txt  cdpB.txt  makescript.py  run.sh  runA.sh
(+542 files in other folders)
